src/objects/Relationship__c.object
<CustomObject>
    <description>Connection between two Contacts.</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the person you want to create the Relationship record for.</description>
        <inlineHelpText>Select the person you want to create the Relationship record for.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional information about how these two people are related.</description>
        <inlineHelpText>Additional information about how these two people are related.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Related Contact is an emergency contact.</description>
        <inlineHelpText>Indicates the Related Contact is an emergency contact.</inlineHelpText>
        <label>Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReciprocalRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Reciprocal Relationship record. This field is automatically populated. Manually updating this field could result in errors.</description>
        <inlineHelpText>Lookup to the related Reciprocal Relationship record. This field is automatically populated. Manually updating this field could result in errors.</inlineHelpText>
        <label>Reciprocal Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the person related to the Contact.</description>
        <inlineHelpText>Select the person related to the Contact.</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hidden Relationships List</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Explanation__c</fullName>
        <description>Text formula that constructs a sentence explaining the relationship between the two Contacts</description>
        <inlineHelpText>A sentence that clarifies who&apos;s who in the Relationship. For example, &quot;&apos;s &quot; Joe Ada is Sara Cordova&apos;s employer.&quot;&apos;s &quot; This field is read-only.</inlineHelpText>
        <formula>TEXT(RelatedContact__r.Salutation) + &quot; &quot; + RelatedContact__r.FirstName + &quot; &quot; + RelatedContact__r.LastName
+ &quot;  &quot;  +  $Label.Relationship_Explanation_Connector + &quot; &quot; +
TEXT(Contact__r.Salutation) + &quot; &quot; + Contact__r.FirstName + &quot; &quot; + Contact__r.LastName + &quot;&apos;s &quot; + TEXT(Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYSTEM_SystemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field that indicates if this Relationship was created automatically as the Reciprocal to another Relationship.</description>
        <inlineHelpText>System field that indicates if this Relationship was created automatically as the Reciprocal to another Relationship.</inlineHelpText>
        <label>_SYSTEM: SystemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Relationship, for example, Current or Former.</description>
        <inlineHelpText>Status of the Relationship, for example, Current or Former.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Describes how the Related Contact is connected to the Contact, for example, friend, coworker, aunt, etc.</description>
        <inlineHelpText>Describes how the Related Contact is connected to the Contact, for example, friend, coworker, aunt, etc.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Coworker</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
                <value>
                    <fullName>Granddaughter</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Contact_Do_Not_Change</fullName>
        <active>true</active>
        <description>Do not allow users to change the Contact value as it damages the paired relationship data.</description>
        <errorConditionFormula>AND(NOT( ISNEW() ), ISCHANGED(  Contact__c ))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Instead of changing the Contacts in this Relationship, either delete this record, or if appropriate, add an end date and update the status to Former. Then create a new Relationship record between the new Contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Contact_Do_Not_Change</fullName>
        <active>true</active>
        <description>Do not allow user to change Related Contact value as it damages the paired relationship data</description>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED( RelatedContact__c ))</errorConditionFormula>
        <errorDisplayField>RelatedContact__c</errorDisplayField>
        <errorMessage>Instead of changing the Contacts in this Relationship, either delete this record, or if appropriate, add an end date and update the status to Former. Then create a new Relationship record between the new Contacts.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>